Delete file js Update  file html+css

--- a/css/about.css
+++ b/css/about.css
@@ -25,11 +25,12 @@
 /* About Content */
 .about-content {
     padding: 80px 0;
+    
 }
 
 .about-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr;
     gap: 4rem;
     text-align: center;
     align-items: center;
